# solar-yosoku

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: python-basic.yml
dashboard/: app.js  colors.js  index.html  solar.js  styles.css
dashboard/data/: baseline_monthly_ghi.json
data/: prefecture_points.csv
data/output/: capacity_by_prefecture.csv  geocode_cache.csv  solar_facilities_geocoded.csv  solar_facilities_geocoded_1mw_special.csv  solar_facilities_location_capacity.csv
data/sample/: sample_capacity_by_prefecture.csv  sample_extra_facilities.csv
docs/: apis.md  solar-glossary.md
scripts/: build_baseline_ghi.py  build_capacity_sample.sh  sample_run.sh
src/solar_power_forecast/: cli.py
tests/: dashboard-colors.test.cjs  dashboard-preferences.test.cjs
